--- a/resume/2015.html
+++ b/resume/2015.html
@@ -56,7 +56,8 @@
             <h6 class="tagline">
                 <a href="https://www.linkedin.com/in/scottryoung" target="blank">LinkedIn</a> | 
                 <a href="https://github.com/coding4kicks" target="blank">Github</a> | 
-                <a href="https://twitter.com/coding4kicks" target="blank">Twitter</a>
+                <a href="https://twitter.com/coding4kicks" target="blank">Twitter</a> | 
+                <a href="http://www.coding4kicks.com/" target="blank">Website</a>
             </h6>
 
         </div>
