--- a/resume/2015.html
+++ b/resume/2015.html
@@ -51,7 +51,7 @@
         </div>
 
         <div>
-            <h5>ON THE INTERENETS</h5>
+            <h5>ON THE INTERNETS</h5>
 
             <h6 class="tagline">
                 <a href="https://www.linkedin.com/in/scottryoung" target="blank">LinkedIn</a> | 
